set min height of code element to one line height

--- a/common/code.scss
+++ b/common/code.scss
@@ -5,6 +5,7 @@
   padding: 12px 8px;
   width: auto;
   max-height: 600px;
+  min-height: 1em;
   overflow: auto;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono,
     DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
